src/snapshots/aidl_parser__tests__interface_with_annotation.snap
---
source: src/lib.rs
expression: res

---
Interface(
  name: "Potato",
  elements: [],
  annotations: [
    Annotation(
      name: "@InterfaceAnnotation1",
      key_values: {},
    ),
    Annotation(
      name: "@InterfaceAnnotation2",
      key_values: {},
    ),
  ],
  doc: None,
  full_range: "...",
  symbol_range: "...",
)
