src/snapshots/aidl_parser__tests__interface_with_javadoc.snap
---
source: src/lib.rs
expression: res

---
Interface(
  name: "Potato",
  elements: [],
  annotations: [],
  doc: Some("Interface documentation"),
  full_range: "...",
  symbol_range: "...",
)
