src/snapshots/aidl_parser__tests__member_with_value.snap
---
source: src/lib.rs
expression: res

---
Member(
  name: "memberName",
  member_type: Type(
    name: "TypeName",
    kind: Custom,
    generic_types: [],
    definition: None,
    symbol_range: "...",
  ),
  value: Some("\"member value\""),
  symbol_range: "...",
  doc: None,
  annotations: [],
  full_range: "...",
)
