src/snapshots/aidl_parser__tests__method_arg_with_direction_and_name.snap
---
source: src/lib.rs
expression: res

---
Arg(
  direction: Out,
  name: Some("roger"),
  arg_type: Type(
    name: "TypeName",
    kind: Custom,
    generic_types: [],
    definition: None,
    symbol_range: "...",
  ),
  doc: None,
  annotations: [],
)
